k8s/shared/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-pfe-ingress
  namespace: app-pfe
spec:
  ingressClassName: nginx
  rules:
    - host: 192.168.56.40
      http:
        paths:
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 7070
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 7070
